--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
           ext=""
           if [ "$GOOS" = "windows" ]; then ext=".exe"; fi
-          go build -o mtb-${GOOS}-${GOARCH}${ext} .
+          go build -ldflags "-X main.version=${GITHUB_REF_NAME#v}" -o mtb-${GOOS}-${GOARCH}${ext} .
 
       - uses: actions/upload-artifact@v4
         with:
