--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,6 +50,8 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+
       - uses: actions/download-artifact@v4
         with:
           merge-multiple: true
@@ -57,4 +59,4 @@ jobs:
       - name: Create release
         env:
           GH_TOKEN: ${{ github.token }}
-        run: gh release create "${{ github.ref_name }}" mtb-* --repo "${{ github.repository }}" --generate-notes
+        run: gh release create "${{ github.ref_name }}" mtb-* THIRD_PARTY_LICENSES LICENSE --repo "${{ github.repository }}" --generate-notes
